Bug 276034 - Amarok does not play Audio-CD content with phonon-vlc backend
Summary: Amarok does not play Audio-CD content with phonon-vlc backend
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-vlc
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 0.4-git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-19 11:53 UTC by David Solbach
Modified: 2011-07-26 10:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.1
Sentry Crash Report:


Attachments
'amarok --debug' output (14.86 KB, text/plain)
2011-06-19 11:53 UTC, David Solbach
Details
log of amarok output of crash during audio cd play (vlc backend) (6.74 KB, text/plain)
2011-06-19 18:35 UTC, David Solbach
Details
log of amarok output of crash during audio cd play (gst backend) (6.13 KB, text/x-log)
2011-06-19 18:41 UTC, David Solbach
Details
Audio CD play log (no crash) (29.16 KB, text/x-log)
2011-06-19 22:58 UTC, Sam Lade
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Solbach 2011-06-19 11:53:22 UTC
Created attachment 61137 [details]
'amarok --debug' output

Version:           2.4.1 (using KDE 4.6.4) 
OS:                Linux

Amarok does not Play any Audio-CD content. Attached you find a text file with a snippet of information printed by 

amarok --debug

after the double click on the track from the audio cd in the playlist.

Along 

Reproducible: Didn't try

Steps to Reproduce:
1. have an Audio-CD displayed in the collection viewer
2. drag a song from the cd to the playlist
3. double-click it

Actual Results:  
Song is not played.

Expected Results:  
Song should be played.

OS: Linux (x86_64) release 2.6.37.1-1.2-desktop
Compiler: gcc
Comment 1 David Solbach 2011-06-19 11:55:58 UTC
probably important lines in the log:

amarok:   [WARNING] [EngineController] Phonon failed to play this URL. Error:  "Cannot find input plugin for MRL [cdda:/]" 
amarok:   [WARNING] [EngineController] Forcing phonon engine reinitialization.
Comment 2 Myriam Schweingruber 2011-06-19 17:43:48 UTC
This is already solved in the upcoming Amarok 2.4.2
Comment 3 David Solbach 2011-06-19 18:35:22 UTC
Created attachment 61151 [details]
log of amarok output of crash during audio cd play (vlc backend)

Tried again, using vlc as phonon backend with 2.4-GIT as of today.

Amnarok crashes. 

'amarok --debug' writes:
---
[0x30b2500] main input error: open of `cdda://' failed: (null)
[0x30b2500] main input error: Ihre Eingabe konnte nicht geöffnet werden
[0x30b2500] main input error: VLC kann die MRL 'cdda://' nicht öffnen. Sehen Sie für Details im Fehlerprotokoll nach.
---

Please see attache
Comment 4 David Solbach 2011-06-19 18:41:24 UTC
Created attachment 61152 [details]
log of amarok output of crash during audio cd play (gst backend)

tried with gst.. it crashes as well. amarok --debug output attached
Comment 5 Sam Lade 2011-06-19 22:58:50 UTC
Created attachment 61160 [details]
Audio CD play log (no crash)

Running Amarok, Phonon and Phonon-VLC git, I can't play audio CDs, but it doesn't crash. I've attached a more complete debug log with Phonon debugging on as well.
Comment 6 Valorie Zimmerman 2011-06-22 11:13:44 UTC
CD Play is now working with freshly built Amarok, freshly built phonon, and freshly built phonon-gstreamer. It still fails with phonon-vlc, silently stepping through the tracks:

amarok: BEGIN: virtual bool Meta::AudioCdAlbum::isCompilation() const 
amarok: END__: virtual bool Meta::AudioCdAlbum::isCompilation() const [Took: 0s]
Comment 7 Myriam Schweingruber 2011-06-23 11:08:22 UTC
Nice to hear :)
Please file a report against phonon-backend-vlc for the remaining issue.
Comment 8 David Solbach 2011-06-23 11:48:43 UTC
reopened and changed product to phonon-vlc
sam has added the attachment with debug info in comment #5
Comment 9 David Solbach 2011-06-23 11:49:47 UTC
changed title accordingly
Comment 10 Harald Sitter 2011-07-26 10:33:39 UTC
Git commit 8cc7b59c6ae37691198fd61e2dca0eb83d369fb0 by Harald Sitter.
Committed on 26/07/2011 at 12:30.
Pushed by sitter into branch '0.4'.

fix cd playback (at least for amarok)

the only way to select an audio track at runtime in vlc is by selecting
the appropriate subitem of the media, however currently this is one
gigantic PITA, so we cannot do this until pvlc gets based on libcutevlc

meanwhile only one scenario is supported: setting the track *before*
play is called, this way we can simply inject the cdda-track option
in playInternal and be done with it

BUG: 276034
FIXED-IN: 0.4.1

M  +9    -1    vlc/mediaobject.h
M  +17   -8    vlc/mediaobject.cpp
M  +14   -2    vlc/mediacontroller.cpp
M  +13   -2    vlc/mediacontroller.h

http://commits.kde.org/phonon-vlc/8cc7b59c6ae37691198fd61e2dca0eb83d369fb0
Comment 11 Harald Sitter 2011-07-26 10:34:05 UTC
Git commit c72f9f806eafc989ba711f6c59da123aafdbfe49 by Harald Sitter.
Committed on 26/07/2011 at 12:30.
Pushed by sitter into branch 'master'.

fix cd playback (at least for amarok)

the only way to select an audio track at runtime in vlc is by selecting
the appropriate subitem of the media, however currently this is one
gigantic PITA, so we cannot do this until pvlc gets based on libcutevlc

meanwhile only one scenario is supported: setting the track *before*
play is called, this way we can simply inject the cdda-track option
in playInternal and be done with it

BUG: 276034
FIXED-IN: 0.4.1

M  +13   -2    src/mediacontroller.h
M  +14   -2    src/mediacontroller.cpp
M  +17   -8    src/mediaobject.cpp
M  +9    -1    src/mediaobject.h

http://commits.kde.org/phonon-vlc/c72f9f806eafc989ba711f6c59da123aafdbfe49