fix cd playback (at least for amarok)

the only way to select an audio track at runtime in vlc is by selecting
the appropriate subitem of the media, however currently this is one
gigantic PITA, so we cannot do this until pvlc gets based on libcutevlc

meanwhile only one scenario is supported: setting the track *before*
play is called, this way we can simply inject the cdda-track option
in playInternal and be done with it

BUG: 276034
FIXED-IN: 0.4.1